--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -12,6 +12,12 @@
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
+  <div class="container">
+    <ion-button class="bttn" shape="round" gravity="center" routerLink="/login">Login</ion-button>
+    <ion-button class="bttn" shape="round" gravity="center" routerLink="/register">Register</ion-button>
+  </div>
+
+  
   
 </ion-content>
 
