--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -7,6 +7,17 @@
   top: 50%;
   transform: translateY(-50%);
 }
+.container {
+  display: flex;
+  justify-content: center; /* Alinea horizontalmente */
+  align-items: center; /* Alinea verticalmente */
+  height: 10vh; /* Ajusta si necesitas */
+}
+
+.btn {
+  padding: 10px 20px;
+  font-size: 16px;
+}
 
 #container strong {
   font-size: 20px;
